--- a/phylocommons/templates/master.html
+++ b/phylocommons/templates/master.html
@@ -7,6 +7,7 @@
     <script src="/static/jquery-1.8.1.min.js"></script>
     <script src="/static/bootstrap.min.js"></script>
     <link href="/static/master.css" rel="stylesheet" type="text/css" />
+    {% block head %}{% endblock %}
 </head>
 
 <body>
