--- a/treeview/static/treelib.css
+++ b/treeview/static/treelib.css
@@ -1,39 +1,79 @@
-div#treeControls {
-    position: relative;
-    width:600px;
-    background-color:white;
-    border:2px solid rgb(228,228,228);
-    border-bottom: none;
-}
-
 div#treeContainer {
     position: relative;
     width:600px;
-    height:500px;
+    height:530px;
     background-color:white;
     border:2px solid rgb(228,228,228);
-    border-top: none;
+}
+
+div#treeControls {
+    position: absolute;
+    left:0px; top:0px;
+    padding:5px;
+    width:750px; height:80px;
+}
+
+div#treeControls img {
+    width:75px; height:75px;
+    z-index:10;
+    background-size:contain;
+    background-repeat:stretch;
+    background-color:#fff;
+    position:relative;
+}
+
+div#treeControls img:hover {
+    cursor:pointer;
+    border:2px solid rgb(0,0,128);
+    background-color:rgb(228,228,228);
 }
 
 div#treeContainer #zoomControls {
     position: absolute;
-    z-index: 10;
+    left:538px; top:85px;
+    padding:5px;
+    width:50px;
+    list-style:none;
+    border:2px solid rgb(228,228,228);
+    margin:0;
 }
 
-div#treeContainer #zoomControls img {
-    width: 50px;
+div#treeContainer #zoomControls li {
+    width:50px; height:50px;
+    background-size:contain;
+    background-repeat:stretch;
+    background-color:#fff;
+    opacity:0.8;
+    position:relative;
+    z-index: 20;
 }
+
+div #treeContainer #zoomControls li:hover {
+    cursor:pointer;
+}
+
+div#treeContainer #zoomControls .zoom-in { background-image:url(/static/zoom-in.svg); }
+div#treeContainer #zoomControls .zoom-in:hover { background-image:url(/static/zoom-in_sel.svg); }
+div#treeContainer #zoomControls .zoom-out { background-image:url(/static/zoom-out.svg); }
+div#treeContainer #zoomControls .zoom-out:hover { background-image:url(/static/zoom-out_sel.svg); }
+div#treeContainer #zoomControls .pan-left { background-image:url(/static/pan-left.svg); }
+div#treeContainer #zoomControls .pan-left:hover { background-image:url(/static/pan-left_sel.svg); }
+div#treeContainer #zoomControls .pan-up { background-image:url(/static/pan-up.svg); }
+div#treeContainer #zoomControls .pan-up:hover { background-image:url(/static/pan-up_sel.svg); }
+div#treeContainer #zoomControls .pan-down { background-image:url(/static/pan-down.svg); }
+div#treeContainer #zoomControls .pan-down:hover { background-image:url(/static/pan-down_sel.svg); }
+div#treeContainer #zoomControls .pan-right { background-image:url(/static/pan-right.svg); }
+div#treeContainer #zoomControls .pan-right:hover { background-image:url(/static/pan-right_sel.svg); }
 
 div#treeContainer svg {
     position: absolute;
     left:0px;
-    top:0px;
-    width:100%;
-    height:100%;
+    top:80px;
+    width:600px;
+    height:450px;
 }
 
 div#treeControls .drawing_type {
     width: 75px;
     border:2px solid rgb(228,228,228);
-    border-top: none;
 }
