Simpler, cleaner redesign of site using bootstrap.

--- a/phylocommons/templates/contributors.html
+++ b/phylocommons/templates/contributors.html
@@ -6,6 +6,8 @@
 {% include "home_menu.html" %}
 {% endblock %}
 
+{% block nav-about %}class="active"{% endblock %}
+
 {% block content %}
 
 <table>
