--- a/phylocommons/templates/profiles/edit_profile.html
+++ b/phylocommons/templates/profiles/edit_profile.html
@@ -4,6 +4,8 @@
 {% block leftmenu %}
 {% include "home_menu.html" %}
 {% endblock %}
+
+{% block nav-user %}class="active"{% endblock %}
  
 {% block content %}
 <p><label>Username:</label> {{ user }}</p>
