--- a/phylocommons/templates/profiles/profile_detail.html
+++ b/phylocommons/templates/profiles/profile_detail.html
@@ -4,6 +4,8 @@
 {% include "home_menu.html" %}
 {% endblock %}
 
+{% block nav-user %}class="active"{% endblock %}
+
 {% block content %}
 
 {% if user %}
