--- a/treeview/templates/view.html
+++ b/treeview/templates/view.html
@@ -8,6 +8,8 @@
     <script type="text/javascript" src="/static/treelib.js"></script> 
 {% endblock %}
 
+{% block nav-trees %}class="active"{% endblock %}
+
 {% block leftmenu %}
 {% include "tree_menu.html" %}
 {% endblock %}
