--- a/phylocommons/static/master.css
+++ b/phylocommons/static/master.css
@@ -1,46 +1,29 @@
 body {
-text-align:left;
-font:12px Arial, Helvetica, sans-serif;
 color:#061C37;
 font-size:100%;
-background:url(/static/bg.jpg) repeat-x #bdbdef;
-margin:0;
-padding:0;
+background-color: #f4f4f4;
 }
 
-p {
-padding-bottom: 20px;
-}
-
-a {
-text-decoration:none;
-font-size: 1.05em;
-}
-
-* {
-text-align:left;
-margin:0 auto;
-}
-
-#page {
-display:block;
-height:auto;
-position:relative;
-width:1060px;
-margin-top:10px;
+#main.container {
+padding:10px;
 }
 
 #header {
-height:85px;
+background-color: #f4f4f4;
+height:150px;
 width:100%;
 }
 
+#header .navbar {
+padding:100px 0 0 0;
+}
+
 #header h1 {
-position:absolute;
-color:#fff;
+float:left;
+color:#aaa;
 font-size:43px;
 left:14px;
-top:30px;
+vertical-align:middle;
 }
 
 #header img {
@@ -51,116 +34,8 @@ float:right;
 color:#00f;
 }
 
-#menu {
-display:block;
-width:100%;
-height:54px;
-float:left;
-clear:both;
-background:#30309d;
-}
-
-#menu ul {
-list-style:none;
-margin-left:auto;
-width:100%;
-padding:0;
-}
-
-#menu li {
-list-style:none;
-display:inline;
-padding:0;
-}
-
-#menu a {
-float:left;
-height:36px;
-display:block;
-text-align:center;
-text-decoration:none;
-color:#fff;
-font-size:18px;
-font-weight:bold;
-padding-top:18px;
-padding-left:20px;
-padding-right:20px;
-}
-
-#menu a:hover {
-background-color:#00f;
-background-repeat:repeat-x;
-}
-
-.floatright {
-float:right;
-}
-
-#leftmenu {
-width:204px;
-float:left;
-height:auto;
-background:#30309d;
-margin-top:15px;
-padding-top:20px;
-padding-bottom:20px;
-}
-
-#leftmenu ul {
-list-style:none;
-width:204px;
-margin:0;
-padding:0;
-}
-
-#leftmenu ul li a,#leftmenu ul li a:visited {
-display:block;
-list-style:none;
-width:184px;
-font-size:16px;
-padding-left:20px;
-padding-top:12px;
-padding-bottom:2px;
-margin:0;
-height:30px;
-color:#FFF;
-font-weight:bold;
-text-decoration:none;
-}
-
-#leftmenu ul li.admin a,#leftmenu ul li.admin a:visited {
-color:yellow;
-}
-
-#leftmenu ul li a:hover {
-color:#EED7D7;
-background-color:#00f;
-}
-
-#content {
-display:block;
-float:left;
-width:836px;
-height:auto;
-padding-left:20px;
-padding-top:30px;
-padding-bottom:5px;
-}
-
-#footer {
-width:100%;
-margin-top:50px;
-float:left;
-text-align:center;
-border-top:1px dashed #30309d;
-}
-
 table {
-border-top: solid 1px #000;
-border-bottom: solid 1px #000;
-border-collapse: collapse;
-width: 100%;
-padding: 0;
+width:100%;
 }
 
 table td {
@@ -191,4 +66,18 @@ font-weight: bold;
 
 pre{
 white-space:pre-wrap;
+}
+
+.footer{
+width:100%;
+text-align:center;
+}
+
+.footer .container{
+padding:20px 0 10px 0;
+background-color: #eee;
+}
+
+.sidebar .nav{
+background:#fff;
 }
