--- a/phylocommons/templates/master.html
+++ b/phylocommons/templates/master.html
@@ -6,56 +6,69 @@
     <link href="/static/bootstrap.min.css" rel="stylesheet" media="screen">
     <script src="/static/jquery-1.8.1.min.js"></script>
     <script src="/static/bootstrap.min.js"></script>
-    <link href="/static/master.css" rel="stylesheet" type="text/css" />
+    <link href="/static/master.css" rel="stylesheet" media="screen">
     {% block head %}{% endblock %}
 </head>
 
 <body>
-    <div id="page">
-        <div id="header">
+    <div id="header">
+        <div class="container">
             <a href='/'><h1>Phylo<span class="blue">Commons</span></h1></a>
             <a href='/'><img src='/static/nescent_logo.png' alt='NESCent'/></a>
+        
+        
+            <div class="navbar">
+                <div class="navbar-inner navbar-collapse">
+                    <ul class="nav">
+                        <li {% block nav-about %}{% endblock %}><a href="/">About</a></li>
+                        <li {% block nav-trees %}{% endblock %}><a href="/trees/">Trees</a></li>
+                        <li {% block nav-query %}{% endblock %}><a href="/query/">Query</a></li>
+                        <li {% block nav-contact %}{% endblock %}><a href="/contact/">Contact</a></li>
+                    </ul>
+                    <ul class="nav pull-right">
+                        <li {% block nav-user %}{% endblock %}>
+                        {% if request.user.is_authenticated %}
+                            <a href='/profiles/{{request.user.username}}/'>{{ request.user.username }}</a></li>
+                        </li>
+                            {% if request.user.is_staff %}
+                        <li><a href="/admin/">admin</a>
+                            {% endif %}
+                        <li><a href="{% url auth_logout %}">logout</a></li>
+                        {% else %}
+                            <a href="{% url registration_register %}?next={{ request.get_full_path }}">Register</a></li>
+                        </li>
+                        <li><a href="{% url auth_login %}{% if request.get_full_path != '/accounts/logout/' %}?next={{ request.get_full_path }}{% endif %}">Sign In</a></li>
+                        {% endif %}
+                        
+                    </ul>
+                </div>
+            </div>
         </div>
-
-        <div id="menu">
-            <ul>
-                <li class="menuitem"><a href="/">About</a></li>
-                <li class="menuitem"><a href="/trees/">Trees</a></li>
-                <li class="menuitem"><a href="/query/">Query</a></li>
-                <li class="menuitem"><a href="/contact/">Contact</a></li>
-                <li class="menuitem floatright" >
-                {% if request.user.is_authenticated %}
-                    <a href='/profiles/{{request.user.username}}/'>{{ request.user.username }}</a>
-                    {% if request.user.is_staff %}
-                    <a href="/admin/">admin</a>
-                    {% endif %}
-                    <a href="{% url auth_logout %}">logout</a>
-                {% else %}
-                    <a href="{% url registration_register %}?next={{ request.get_full_path }}">Register</a>
-                    <a href="{% url auth_login %}{% if request.get_full_path != '/accounts/logout/' %}?next={{ request.get_full_path }}{% endif %}">Sign In</a>
-                {% endif %}
-                    
-                </li>
-            </ul>
-        </div>
-
-        <div id="leftmenu">
-            <ul>
-                {% block leftmenu %}
+    </div>
+    
+    <div id="main" class="container">
+        <div id="content" class="row">
+            <div class="span9 main">
+                {% block content %}
                 {% endblock %}
-            </ul>
-        </div>
-
-
-        <div id="content">
-            {% block content %}
-            {% endblock %}
+            </div>
+            
+            <div class="span3 sidebar">
+                <ul class="nav nav-tabs nav-stacked">
+                    {% block leftmenu %}
+                    {% endblock %}
+                </ul>
+            </div>
         </div>
         
-        <div id="footer">
-            &copy; 2013 <a href='http://www.nescent.org'>National Evolutionary Synthesis Center</a>
+    </div>
+    
+    <div class="footer">
+        <div class="container">
+            <p class="muted credit">
+                &copy; 2013 <a href='http://www.nescent.org'>National Evolutionary Synthesis Center</a>
+            </p>
         </div>
-       
     </div>
 </body>
 </html>
