--- a/phylocommons/templates/registration/password_change_done.html
+++ b/phylocommons/templates/registration/password_change_done.html
@@ -5,6 +5,8 @@
 {% include "home_menu.html" %}
 {% endblock %}
 
+{% block nav-user %}class="active"{% endblock %}
+
 {% block content %}
 <p>{% trans "Password changed" %}</p>
 {% endblock %}
