--- a/phylocommons/templates/registration/password_change_form.html
+++ b/phylocommons/templates/registration/password_change_form.html
@@ -5,6 +5,8 @@
 {% include "home_menu.html" %}
 {% endblock %}
 
+{% block nav-user %}class="active"{% endblock %}
+
 {% block content %}
 <form method="post" action=".">
   {% csrf_token %}
