--- a/phylocommons/templates/registration/registration_form.html
+++ b/phylocommons/templates/registration/registration_form.html
@@ -5,6 +5,8 @@
 {% include "home_menu.html" %}
 {% endblock %}
 
+{% block nav-user %}class="active"{% endblock %}
+
 {% block content %}
 <form method="post" action=".">
   {{ form.as_p }}
