--- a/treequery/templates/query.html
+++ b/treequery/templates/query.html
@@ -6,6 +6,8 @@
 {% include "tree_menu.html" %}
 {% endblock %}
 
+{% block nav-query %}class="active"{% endblock %}
+
 {% block content %}
 
 <form action="{% url query %}" method="post" enctype="multipart/form-data">
