--- a/treeview/templates/list.html
+++ b/treeview/templates/list.html
@@ -6,6 +6,8 @@
 {% include "tree_menu.html" %}
 {% endblock %}
 
+{% block nav-trees %}class="active"{% endblock %}
+
 {% block content %}
 
 {% if tree_list %}
