--- a/phylocommons/templates/master.html
+++ b/phylocommons/templates/master.html
@@ -13,8 +13,8 @@
 <body>
     <div id="header">
         <div class="container">
-            <a href='/'><h1>Phylo<span class="blue">Commons</span></h1></a>
-            <a href='/'><img src='/static/nescent_logo.png' alt='NESCent'/></a>
+            <a href='/'><img src='/static/phylocommons-logo.svg' height="70px" alt='PhyloCommons' class="logo"/></a>
+            <a href='/'><img src='/static/nescent_logo.png' alt='NESCent' class="nescent"/></a>
         
         
             <div class="navbar">
