--- a/treeview/templates/view.html
+++ b/treeview/templates/view.html
@@ -69,6 +69,7 @@
                 $('#message').empty();
                 $('#newick').val(data);
                 $('div#treelib-widget').show();
+                draw_tree('newick', 'circle');
             },
             error: function(msg) {
                 $('#message').empty();
