--- a/phylocommons/templates/about.html
+++ b/phylocommons/templates/about.html
@@ -17,13 +17,17 @@
     analyses.
 </p>
 <p>
+    <strong>PhyloCommons is currently in beta and therefore may change rapidly before a
+    stable version is released.</strong> 
+</p>
+<p>
     PhyloCommons uses semantic web technologies including RDF to enable quick, efficient 
     reuse of trees. PhyloCommons leverages the open source 
     <a href='http://biopython.org'>BioPython project</a> to convert trees in various 
     formats into RDF. These trees are then stored in Virtuoso, a database optized 
     for RDF storage. This makes common tasks such as querying for specific trees 
-    based on metadata (year published, reconstruction method) or creating subtrees 
-    from a list of taxa very efficient.
+    based on metadata (year published, reconstruction method) or creating 
+    subtrees from a list of taxa very efficient.
 </p>
 <p>
     <strong>Make PhyloCommons better</strong> - you can contribute to PhyloCommons by:
