Add taxonomy option to tree query page. TODO: hide some of these settings under a 'more options' button.

--- a/treequery/templates/query.html
+++ b/treequery/templates/query.html
@@ -29,6 +29,14 @@
             {{ form.tree }}
             {{ form.tree.errors }}
         </td></tr>
+
+
+        <tr><td style='border-bottom:none;'>
+            <label for='tree'>Using taxonomy</label>
+        </td><td style='border-bottom:none;'>
+            {{ form.taxonomy }}
+            {{ form.taxonomy.errors }}
+        </td></tr>
         
         <tr><td style='border-top:none;'>
             <label for='filter'>where</label>
