Adding message block to SVG tree viewer.

--- a/treeview/templates/svgview.html
+++ b/treeview/templates/svgview.html
@@ -18,6 +18,8 @@
 
 {% include "treelib_widget.html" %}
 
+<p id='message' class='muted'></p>
+
 <input type="hidden" name="newick" id="newick" value=""/>
 <input type="hidden" name="tree_src_url" id="tree_src_url" value="{{tree_src}}"/>
 
