--- a/treequery/templates/query.html
+++ b/treequery/templates/query.html
@@ -30,6 +30,20 @@
             {{ form.tree.errors }}
         </td></tr>
 
+        <tr><td>
+            <label for='format'>Result format</label>
+        </td><td>
+            {{ form.format }}
+            {{ form.format.errors }}
+            
+        </td></tr>
+        
+        <tfoot><td></td><td><br/><br/><input type="submit" value="Get tree" /></td></tfoot>
+    </table>
+
+    <a onclick='toggle_extra_options()'>Advanced options...</a>
+
+    <div id='extra-options'><table>
 
         <tr><td style='border-bottom:none;'>
             <label for='tree'>Using taxonomy</label>
@@ -39,7 +53,7 @@
         </td></tr>
         
         <tr><td style='border-top:none;'>
-            <label for='filter'>where</label>
+            <label for='filter'>SPARQL tree filter</label>
         </td><td style='border-top:none;'>
             {{ form.filter }}
             {{ form.filter.errors }}
@@ -52,25 +66,19 @@
             {{ form.prune.errors }}
         </td></tr>
         
-        <tr><td>
-            <label for='match_all'>Must match all?</label>
-        </td><td>
-            {{ form.match_all }}
-            {{ form.match_all.errors }}
-        </td></tr>
-        
-        <tr><td>
-            <label for='format'>Result format</label>
-        </td><td>
-            {{ form.format }}
-            {{ form.format.errors }}
-            
-        </td></tr>
-        
-        <tfoot><td></td><td><br/><br/><input type="submit" value="Get tree" /></td></tfoot>
-    </table>
-    
+    </table></div>
+
 </form>
+
+<script type='text/javascript'>
+    $(document).ready(function() {
+        $('div#extra-options').hide()
+    });
+
+    function toggle_extra_options() {
+        $('div#extra-options').toggle();
+    }
+</script>
 
 <br/><br/>
 
@@ -90,20 +98,25 @@
         containing the greatest number of the entered taxa will be chosen
         automatically.
     </p>
-    <p>
-        Be careful if you don't select a tree - it's possible that you'll get
-        results from a taxonomy, which may not be very useful.
-    </p>
     
     <p>
-        <strong>Where:</strong>
-        If "select automatically" is selected, this field can be used to filter
-        which trees will be considered. You can enter a CQL query here.
-        [TODO: document this feature]
+        <strong>Result format:</strong>
+        The output format of the result tree.
     </p>
+
     <p>
-        If a single tree is selected that does not match these requirements,
-        no result will be returned.
+        <strong>Taxonomy:</strong>
+        Choosing a taxonomy will enable synonym matching: if the exact names you
+        entered aren't present in the tree, PhyloCommons will also attempt to match
+        to their synonyms. When matching synonyms, the resulting tree will contain 
+        the labels you queried for instead of the labels from the phylogeny.
+    </p>
+
+    <p>
+        <strong>SPARQL filter:</strong>
+        If "select automatically" is selected, this field can be used to filter
+        which trees will be considered. You can enter a SPARQL filter expression here,
+        using the ?tree variable to stand for potential matching trees.
     </p>
     
     <p>
@@ -114,22 +127,11 @@
         taxa will be returned.
     </p>
     
-    <p>
-        <strong>Match all:</strong>
-        If checked, only return a tree if it contains all of the listed taxa.
-        Otherwise, return an error.
-    </p>
-    
-    <p>
-        <strong>Result format:</strong>
-        The output format of the result tree.
-    </p>
-    
     <br/>
     
     <p>
         You can also query PhyloCommons using a URL string:<br/><br/>
-        {{ domain }}{% url query %}?taxa=Taxon 1,Taxon 2,Taxon 3&tree=tree_uri&filter=cql_filter&prune=y&match_all=n&format=newick
+        {{ domain }}{% url query %}?taxa=Taxon 1,Taxon 2,Taxon 3&tree=tree_uri&filter=cql_filter&prune=y&format=newick
     </p>
 </em>
 
