Updating treelib-js with SVG download button.

--- a/treeview/templates/treelib_widget.html
+++ b/treeview/templates/treelib_widget.html
@@ -9,7 +9,7 @@
             <img src="/static/phylogram.svg" onclick="draw_tree('newick', 'phylogram')"/>
             <img src="/static/circle.svg" onclick="draw_tree('newick', 'circle')"/>
             <img src="/static/circlephylogram.svg" onclick="draw_tree('newick', 'circlephylogram')"/>
-            <img src="/static/download.svg" onclick="download_svg()"/>
+            <a id="download" href-lang="image/svg+xml" href="" download="tree.svg"><img src="/static/download.svg"/></a>
         </div>
         
         <ul id="zoomControls">
