--- a/treeview/templates/svgview.html
+++ b/treeview/templates/svgview.html
@@ -1,6 +1,6 @@
 {% extends "master.html" %}
 
-{% block title %}{{tree_id}} - PhyloCommons{% endblock %}
+{% block title %}SVG Tree Viewer - PhyloCommons{% endblock %}
 
 {% block head %}
     <link rel="stylesheet" href="/static/treelib.css" type="text/css" />
