--- a/treeview/templates/svgview.html
+++ b/treeview/templates/svgview.html
@@ -38,7 +38,10 @@
                 $('img#loading').hide();
                 $('div#treelib-widget').show();
                 draw_tree('newick', 'circle');
-                $('#message').append('<a href="data:text/plaintext,' + encodeURIComponent(data) + '">Click to download in Newick format</a>');
+                $('#message').append('<a href="data:text/plaintext,' + 
+                                     data + //encodeURIComponent(data) + 
+                                     '">Click to download in Newick format</a>'
+                                     );
             },
             error: function(msg) {
                 $('#message').empty();
