--- a/treeview/templates/svgview.html
+++ b/treeview/templates/svgview.html
@@ -37,7 +37,11 @@
                 $('#newick').val(data);
                 $('img#loading').hide();
                 $('div#treelib-widget').show();
-                draw_tree('newick', 'circle');
+                try {
+                    draw_tree('newick', 'circle');
+                } catch(e) {
+                    $('#message').append('<p class='error'>Error: ' + e.message + '</p>');
+                }
                 $('#message').append('<a href="data:text/plaintext,' + 
                                      data + //encodeURIComponent(data) + 
                                      '">Click to download in Newick format</a>'
