--- a/treeview/templates/list.html
+++ b/treeview/templates/list.html
@@ -23,7 +23,7 @@
     <ul>
         {% if tree_list.previous_page_number > 1 %}
         <li><a href="?page=1">1</a></li>
-        <li><a>...</a></li>
+        <li class="disabled"><a>...</a></li>
         {% endif %}
 
         {% if tree_list.has_previous %}
@@ -37,7 +37,7 @@
         {% endif %}
 
         {% if tree_list.next_page_number < tree_list.paginator.num_pages %}
-        <li><a>...</a></li>
+        <li class="disabled"><a>...</a></li>
         <li><a href="?page={{ tree_list.paginator.num_pages }}">{{ tree_list.paginator.num_pages }}</a></li>
         {% endif %}
     </ul>
