Use polaroid image for tree viewer launcher.

--- a/treeview/templates/view.html
+++ b/treeview/templates/view.html
@@ -33,7 +33,7 @@
 
     <tr><td>Tree Viewer</td><td>
         <a href="/trees/{{tree_id}}/view">
-            <img src='/static/rectangle.svg' width="100px" height="100px" style='border: 2px solid #00f;' />
+            <img class="img-polaroid" src='/static/rectangle.svg' width="100px" height="100px" />
         </a>
     </td></tr>
 </table>
