--- a/treeview/templates/svgview.html
+++ b/treeview/templates/svgview.html
@@ -40,7 +40,7 @@
                 try {
                     draw_tree('newick', 'circle');
                 } catch(e) {
-                    $('#message').append('<p class='error'>Error: ' + e.message + '</p>');
+                    $('#message').append("<p class='error'>Error: " + e.message + '</p>');
                 }
                 $('#message').append('<a href="data:text/plaintext,' + 
                                      data + //encodeURIComponent(data) + 
