--- a/treeupload/templates/add.html
+++ b/treeupload/templates/add.html
@@ -10,64 +10,69 @@
 
 {% block content %}
 
-<form action="{% url add %}" method="post" enctype="multipart/form-data">
+<form class="form form-horizontal" action="{% url add %}" method="post" enctype="multipart/form-data">
     {% csrf_token %}
     
     {{ form.non_field_errors }}
     
-    <table>
-        <tr><td>
-            <label for='q'>Tree ID</label>
-        </td><td>
-            {{ tree_uri }}
+    <div class="control-group">
+        <label class="control-label" for='q'>Tree ID</label>
+        <div class="controls">
+            <div class="input-prepend">
+            <span class="add-on">{{ tree_uri }}</span>
+            </div>
             {{ form.tree_id }}
             {{ form.tree_id.errors }}
-        </td></tr>
+        </div>
+    </div>
         
-        <tr><td>
-            <label for='format'>Tree format</label>
-        </td><td>
+    <div class="control-group">
+        <label class="control-label" for='format'>Tree format</label>
+        <div class="controls">
             {{ form.format }}
             {{ form.format.errors }}
-        </td></tr>
-        
-        <tr><td>
-            <label for='format'>Tree file</label>
-        </td><td>
+        </div>
+    </div>
+    
+    <div class="control-group">
+        <label class="control-label" for='format'>Tree file</label>
+        <div class="controls">
             {{ form.tree_file }}
             {{ form.tree_file.errors }}
-        </td></tr>
-        
-        <tfoot><td></td><td><br/><br/><input type="submit" value="Submit" /></td></tfoot>
-    </table>
+        </div>
+    </div>
+    
+    <div class="control-group">
+        <div class="controls">
+            <button class="btn btn-primary" />Submit</button>
+        </div>
+    </div>
     
 </form>
 
 <br/><br/>
 
-<em>
-    <p>
-        <strong>Tree ID:</strong>
+<dl class="dl-horizontal">
+    <dt>Tree ID</dt>
+    <dd>
         Give your tree a short but descriptive ID. You can use letters, numbers,
         dashes, and underscores. Tree IDs are case sensitive.
-    </p>
-    <p>
+
         This will be used to generate the tree's URI:
-    </p>
-    <p>
+
         {{ domain }}/trees/(tree_id)
-    </p>
+    </dd>
     
-    <p>
-        <strong>Tree format:</strong>
+    <dt>Tree format</dt>
+    <dd>
         The format of the tree being added. If the tree file is unable to be
         parsed, it will not be added and will instead return an error.
-    </p>
+    </dd>
     
-    <p>
-        <strong>Tree file:</strong>
+    <dt>Tree file:</dt>
+    <dd>
         A text file containing the tree(s).
-    </p>
+    </dd>
 </em>
 
 {% endblock%}
