Adding DOI field to submission form.

--- a/treeupload/templates/add.html
+++ b/treeupload/templates/add.html
@@ -41,6 +41,14 @@
             {{ form.tree_file.errors }}
         </div>
     </div>
+
+    <div class="control-group">
+        <label class="control-label" for='format'>DOI (optional)</label>
+        <div class="controls">
+            {{ form.doi }}
+            {{ form.doi.errors }}
+        </div>
+    </div>
     
     <div class="control-group">
         <div class="controls">
