--- a/treequery/templates/query.html
+++ b/treequery/templates/query.html
@@ -81,7 +81,7 @@
         
     <div class="control-group">
         <div class="controls">
-            <button class="btn btn-primary" type="submit">Get tree</button>
+            <button class="btn btn-primary btn-block" type="submit">Get tree</button>
         </div>
     </div>
 </form>
