Minor query interface fixes.

--- a/treequery/templates/query.html
+++ b/treequery/templates/query.html
@@ -93,7 +93,7 @@
     });
 
     function toggle_extra_options() {
-        $('.advanced').toggle();
+        $('.advanced').slideToggle();
     }
 </script>
 
