Disambiguate page is in query section.

--- a/treequery/templates/disambiguate.html
+++ b/treequery/templates/disambiguate.html
@@ -6,7 +6,7 @@
 {% include "tree_menu.html" %}
 {% endblock %}
 
-{% block nav-trees %}class="active"{% endblock %}
+{% block nav-query %}class="active"{% endblock %}
 
 {% block content %}
 
