--- a/treequery/templates/disambiguate.html
+++ b/treequery/templates/disambiguate.html
@@ -22,7 +22,7 @@
 <table class='table table-condensed table-striped table-hover table-bordered'>
     {% for tree_id, match_count in tree_list %}
     <tr><td>
-        <a href='/trees/{{tree_id}}'>{{tree_id}} ({{match_count}})</a>
+        <a href='/trees/{{tree_id}}'>{{tree_id}} ({{match_count}}/{{max_match_count}})</a>
         <button class="btn {% if match_count == max_match_count %}btn-primary{% endif %} pull-right" id="tree_uri" name="tree" value="{{tree_id}}">Get tree</button>
     </td></tr>
     {% endfor %}
