--- a/treequery/templates/query.html
+++ b/treequery/templates/query.html
@@ -147,7 +147,7 @@
 
 <p>
     You can also query PhyloCommons using a URL string:<br/><br/>
-    {{ domain }}{% url query %}?taxa=Taxon 1,Taxon 2,Taxon 3&tree=tree_uri&filter=cql_filter&prune=y&format=newick
+    {{ domain }}{% url query %}?taxa=Taxon 1,Taxon 2,Taxon 3&tree=tree_uri&filter=cql_filter&prune=True&format=newick
 </p>
 
 {% endblock %}
