Styling contributors page.

--- a/phylocommons/templates/contributors.html
+++ b/phylocommons/templates/contributors.html
@@ -10,10 +10,10 @@
 
 {% block content %}
 
-<table>
+<table class='table table-border'>
     <thead>
-        <td><strong>Name</strong></td>
-        <td><strong>Role</strong></td>
+        <td>Name</td>
+        <td>Role</td>
     </thead>
     <tr>
         <td width=25%>
@@ -38,39 +38,10 @@
             Enrico Pontelli
         </td>
         <td>
-            Conception/implementation of an RDF-based treestore. (Phylotastic 1)
+            Treestore group, Phylotastic hackathon
         </td>
     </tr>
-    
-    <tr>
-        <td>
-            Joachim Baran, <br/>
-            Hilmar Lapp, <br/>
-            Enrico Pontelli, <br/>
-            Arlin Stoltzfus, <br/>
-            Andrea Thomer, <br/>
-            Ramona Walls
-        </td>
-        <td>
-            Annotation of trees and design of an annotation pipeline. (Phylotastic 2)
-        </td>
-    </tr>
-    
-    <tr>
-        <td>
-            Karen Cranston, <br/>
-            Cody Hinchliff, <br/>
-            Mark Holder, <br/>
-            Naim Matasci, <br/>
-            Ben Morris, <br/>
-            Shannon Oliver, <br/>
-            Rutger Vos, <br/>
-            Derrick Zwicki
-        </td>
-        <td>
-            Design of phylogenetic database communication standards and architecture. (Phylotastic 2)
-        </td>
-    </tr>
+
 </table>
 
 <br/><br/>
