--- a/treequery/templates/query.html
+++ b/treequery/templates/query.html
@@ -32,9 +32,9 @@
         <div class="controls">
             <div class="input-prepend stretch">
             <span class="add-on">{{ tree_uri }}</span>
-            {{ form.tree }}
+            {{ form.tree_id }}
             </div>
-            {{ form.tree.errors }}
+            {{ form.tree_id.errors }}
         </div>
     </div>
     
