Fixing tree list URL on about page.

--- a/phylocommons/templates/about.html
+++ b/phylocommons/templates/about.html
@@ -33,7 +33,7 @@
     <strong>Make PhyloCommons better</strong> - you can contribute to PhyloCommons by:
     <ul>
         <li><a href='{% url add %}'>Submitting new trees</a></li>
-        <li><a href='{% url trees %}'>Adding or correcting metadata on existing trees</a></li>
+        <li><a href='{% url tree_list %}'>Adding or correcting metadata on existing trees</a></li>
         <li><a href='https://github.com/bendmorris/phylocommons/issues' target='_blank'>Suggesting enhancements or reporting bugs</a></li>
     </ul>
 </p>
